# address-formatter-rs

./: .travis.yml  Cargo.toml  README.md
src/: address.rs  formatter.rs  handlebar_helper.rs  lib.rs  place.rs  read_configuration.rs
tests/: opencage_tests.rs  simple_test.rs
